Construct the URI directly instead of first creating an URL